<resources>
    <string name="app_name" translatable="false">Budgeteer Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="action_balance">Adjust current balance</string>
    <string name="fab_add_expense">Add expense/income</string>
    <string name="fab_add_monthly_expense">Add recurring expense/income</string>
    <string name="title_activity_add_expense">Add expense</string>
    <string name="title_activity_add_income">Add income</string>
    <string name="title_activity_edit_expense">Edit expense</string>
    <string name="title_activity_edit_income">Edit income</string>
    <string name="title_activity_recurring_expense_add">Add recurring expense</string>
    <string name="title_activity_recurring_income_add">Add recurring income</string>
    <string name="title_activity_recurring_expense_edit">Edit recurring expense</string>
    <string name="title_activity_recurring_income_edit">Edit recurring income</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">Budgeteer Buddy</string>
    <string name="title_activity_premium">Premium</string>
    <string name="title_activity_monthly_report">Monthly Report</string>
    <string name="title_activity_expense_analysis">Expense Analysis</string>
    <string name="title_analysis_weekly">Weekly</string>
    <string name="title_analysis_monthly">Monthly</string>
    <string name="title_analysis_yearly">Yearly</string>
    <string name="cancel">Cancel</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="category">Category</string>
    <string name="amount">Amount ( $ )</string>
    <string name="memo">Memo (Optional)</string>
    <string name="type">Type</string>
    <string name="payment">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="first_occurrence">First instance</string>
    <string name="no_expense_for_today">No income or expense yet.</string>
    <string name="spending_category_income">Income</string>
    <string name="spending_category_savings">Savings</string>
    <string name="spending_category_rent_mortgage">Rent/Mortgage</string>
    <string name="spending_category_transportation">Transportation</string>
    <string name="spending_category_food_household">Food/Household</string>
    <string name="spending_category_medical">Medical</string>
    <string name="spending_category_entertainment">Entertainment</string>
    <string name="spending_category_other">Other</string>
    <string name="no_category_error">Enter a category</string>
    <string name="no_description_error">Enter a description</string>
    <string name="no_amount_error">Enter an amount</string>
    <string name="negative_amount_error">Amount should be greater than 0</string>
    <string name="negative_balance_error">Balance cannot go below 0</string>
    <string name="invalid_amount">Not a valid amount</string>
    <string name="dialog_edit_expense_title">What do you want to do?</string>
    <string name="dialog_edit_income_title">What do you want to do?</string>
    <string-array name="dialog_edit_expense_choices">
        <item>Edit expense</item>
        <item>Delete expense</item>
    </string-array>
    <string-array name="dialog_edit_income_choices">
        <item>Edit income</item>
        <item>Delete income</item>
    </string-array>
    <string name="dialog_edit_recurring_expense_title">Recurring expense: What do you want to do?</string>
    <string name="dialog_edit_recurring_income_title">Recurring income: What do you want to do?</string>
    <string-array name="dialog_edit_recurring_expense_choices">
        <item>Edit this instance</item>
        <item>Delete this instance only</item>
        <item>Delete all following</item>
        <item>Delete all before</item>
        <item>Delete all</item>
    </string-array>
    <string-array name="dialog_edit_recurring_income_choices">
        <item>Edit this instance</item>
        <item>Delete this instance only</item>
        <item>Delete all following</item>
        <item>Delete all before</item>
        <item>Delete all</item>
    </string-array>
    <string name="expense_delete_snackbar_text">Expense deleted</string>
    <string name="income_delete_snackbar_text">Income deleted</string>
    <string name="adjust_balance_title">Adjust current balance</string>
    <string name="adjust_balance_message">Adjust how much you currently have on your account</string>
    <string name="adjust_balance_expense_title">Balance</string>
    <string name="adjust_balance_snackbar_text">Balance adjusted to %s</string>
    <string name="account_balance_format">Balance on %s:</string>
    <string name="account_balance_date_format">MMM dd</string>
    <string name="add_expense_date_format">MMM dd yyyy</string>
    <string name="adjust_limit_warning_title">Change warning threshold for low balance</string>
    <string name="adjust_limit_warning_message">Set the threshold value (must be > 0)</string>
    <string name="adjust_limit_warning_error_title">Oops</string>
    <string name="adjust_limit_warning_error_message">The value you entered is invalid. It must be a positive number, superior to 0</string>
    <string name="adjust_savings_goal_title">Change savings goal</string>
    <string name="adjust_savings_goal_message">Set the goal value (must be > 0)</string>
    <string name="adjust_savings_goal_error_title">Oops</string>
    <string name="adjust_savings_goal_error_message">The value you entered is invalid. It must be a positive number, superior to 0</string>
    <string name="adjust_balance_error_title">Oops</string>
    <string name="adjust_balance_error_message">The value you entered is invalid.</string>
    <string name="add_expense_message_other">Save. Save. Save.</string>
    <string name="add_expense_message_4">Be careful spending money on your fun.</string>
    <string name="add_expense_message_3">Try walking to work to save money.</string>
    <string name="add_expense_message_2">Don\'t forget to pay the bills.</string>
    <string name="add_expense_message_1">Keep on saving.</string>
    <string name="add_expense_message_0">Don\'t forget to save some of that income!</string>
    <string name="add_expense_message_goal_met">Your goal has been met. Keep saving!</string>
    <string name="monthly">MONTHLY</string>
    <string name="weekly">WEEKLY</string>
    <string name="bi_weekly">BI-WEEKLY</string>
    <string name="yearly">YEARLY</string>
    <string name="recurring_expense_add_loading_title">Loading</string>
    <string name="recurring_expense_add_loading_message">Creating recurring expense…</string>
    <string name="recurring_income_add_loading_message">Creating recurring income…</string>
    <string name="recurring_expense_add_error_title">Oops</string>
    <string name="recurring_expense_add_error_message">An error occurred.</string>
    <string name="recurring_expense_delete_success_message">Recurring expense deleted with success</string>
    <string name="recurring_expense_delete_loading_title">Deleting</string>
    <string name="recurring_expense_delete_loading_message">Deleting recurring expense…</string>
    <string name="recurring_expense_delete_error_title">Oops</string>
    <string name="recurring_expense_delete_error_message">An error occurred.</string>
    <string name="recurring_expense_restoring_loading_title">Canceling</string>
    <string name="recurring_expense_restoring_loading_message">Restoring deleted recurring expense…</string>
    <string name="recurring_expense_restored_success_message">Recurring expense restored with success</string>
    <string name="recurring_expense_restore_error_title">Oops</string>
    <string name="recurring_expense_restore_error_message">An error occurred.</string>
    <string name="recurring_expense_delete_first_error_title">Oops</string>
    <string name="recurring_expense_delete_first_error_message">There are no instances before this one.</string>
    <string name="expense_delete_error_title">Oops</string>
    <string name="expense_delete_error_message">An error occurred.</string>
    <string name="recurring_expense_interval">Interval</string>
    <string name="recurring_interval_weekly">Every week</string>
    <string name="recurring_interval_bi_weekly">Every 2 weeks</string>
    <string name="recurring_interval_monthly">Every month</string>
    <string name="recurring_interval_yearly">Every year</string>
    <string name="recurring_update_notification">New feature: Based on a popular request, you can now add weekly, bi-weekly and yearly recurring expenses!</string>
    <string name="graph_label_weekly_expenses">Weekly Expenses</string>
    <string name="graph_label_monthly_expenses">Monthly Expenses</string>
    <string name="graph_label_yearly_expenses">Yearly Expenses</string>
    <string name="graph_label_no_expenses_day">There aren\'t any expenses for today!</string>
    <string name="graph_label_no_expenses_week">There aren\'t any expenses or incomes for the last 7 days!</string>
    <string name="graph_label_no_expenses_year">There aren\'t any expenses or incomes for this year!</string>
    <string name="graph_label_sunday">Sunday</string>
    <string name="graph_label_monday">Monday</string>
    <string name="graph_label_tuesday">Tuesday</string>
    <string name="graph_label_wednesday">Wednesday</string>
    <string name="graph_label_thursday">Thursday</string>
    <string name="graph_label_friday">Friday</string>
    <string name="graph_label_saturday">Saturday</string>
    <string name="graph_label_january">January</string>
    <string name="graph_label_february">February</string>
    <string name="graph_label_march">March</string>
    <string name="graph_label_april">April</string>
    <string name="graph_label_may">May</string>
    <string name="graph_label_june">June</string>
    <string name="graph_label_july">July</string>
    <string name="graph_label_august">August</string>
    <string name="graph_label_september">September</string>
    <string name="graph_label_october">October</string>
    <string name="graph_label_november">November</string>
    <string name="graph_label_december">December</string>
    <string name="setting_category_app_title">App</string>
    <string name="setting_category_rate_button_title">Like the app?</string>
    <string name="setting_category_rate_button_message">Let me know what you think</string>
    <string name="setting_category_bug_report_send_button_title">Report a bug</string>
    <string name="bug_report_email" translatable="false">budgeteerbuddy@jordanjudt.com</string>
    <string name="setting_category_bug_report_send_subject" translatable="false">Budgeteer Buddy - Bug report</string>
    <string name="setting_category_bug_report_send_text">\n\n---\n*Please do not remove this part*\nBudgeteer Buddy id: %s</string>
    <string name="setting_category_bug_report_send_error">Unable to find an app to send bug report email</string>
    <string name="setting_category_general_title">General</string>
    <string name="setting_category_currency_change_button_title">Change currency (%s)</string>
    <string name="setting_category_currency_change_button_message">Select the currency you want to use</string>
    <string name="onboarding_screen_3_title">All set!</string>
    <string name="onboarding_screen_3_message">(That was easy, huh?)</string>
    <string name="onboarding_screen_3_message2">What do you have to do next?</string>
    <string name="onboarding_screen_3_message3">1. Add recurring expenses and incomes (salary, rent, bills…)\n2. Don\'t forget to add your daily expenses and incomes during the day</string>
    <string name="onboarding_screen_3_message4">Thank you for using Budgeteer Buddy, and welcome :)</string>
    <string name="onboarding_screen_3_cta">Let\'s go!</string>
    <string name="monthly_report_hint">Psst: You can access monthly reports from this button!</string>
</resources>