<!--
   Copyright (c) 2018 Jordan Judt and Alexis Layne.

   Original project "EasyBudget" Copyright (c) Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ajapplications.budgeteerbuddy.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_marginTop="-7dp"
            android:background="@drawable/elevation_shadow" />

        <LinearLayout
            android:id="@+id/budgetLineContainer"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/budget_green"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/budgetLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/budgetLineAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textColor="@android:color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/emptyExpensesRecyclerViewPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@color/placeholder_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:alpha="0.6"
                android:src="@drawable/ic_wallet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_expense_for_today"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/expensesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:scrollbars="vertical" />

    </LinearLayout>


    <View
        android:id="@+id/fab_choices_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="gone" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/fab_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            app:layout_behavior="com.ajapplications.budgeteerbuddy.view.main.FloatingActionButtonBehavior"
            fab:fab_addButtonColorNormal="@color/primary"
            fab:fab_addButtonColorPressed="@color/primary_dark"
            fab:fab_addButtonPlusIconColor="@android:color/white"
            fab:fab_labelStyle="@style/fab_labels_style"
            tools:ignore="RtlHardcoded">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_new_recurring_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/fab_add_expense"
                fab:fab_colorPressed="@color/fab_add_expense_pressed"
                fab:fab_icon="@drawable/ic_autorenew_white"
                fab:fab_size="mini"
                fab:fab_title="@string/fab_add_monthly_expense" />

            <com.getbase.floatingactionbutton.AddFloatingActionButton
                android:id="@+id/fab_new_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/fab_add_monthly_expense"
                fab:fab_colorPressed="@color/fab_add_monthly_expense_pressed"
                fab:fab_plusIconColor="@android:color/white"
                fab:fab_size="mini"
                fab:fab_title="@string/fab_add_expense" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/monthly_report_hint"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="34dp"
        android:layout_marginTop="-30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@drawable/triangle_drawable" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/monthly_report_hint_background"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/monthly_report_hint"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/monthly_report_hint_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/ok"
                android:theme="@style/BlueButton" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
