<!--
   Copyright 2015 Benoit LETONDOR

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ajapplications.budgeteerbuddy.view.RecurringExpenseEditActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_expense_height"
                android:background="@color/primary"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/category_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/TextLabelDark">

                    <com.ajapplications.budgeteerbuddy.view.main.ClickToSelectEditText
                        android:id="@+id/category_selectedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"
                        android:inputType="text|textCapSentences"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/amount_inputlayout"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.45"
                        android:theme="@style/TextLabelDark">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/amount_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789.,"
                            android:inputType="numberDecimal"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0.55"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/recurring_expense_interval"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <Spinner
                            android:id="@+id/expense_type_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_inputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/TextLabelDark">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/memo_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/memo"
                        android:inputType="text|textCapSentences"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_expense_fab"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/fab_margin_top"
                android:layout_marginBottom="-5dp"
                android:layout_marginRight="28dp"
                app:srcCompat="@drawable/ic_save_white_24dp"
                android:scaleType="center"
                android:scaleX="0"
                android:scaleY="0"
                android:alpha="0"
                app:backgroundTint="@color/fab_add_monthly_expense"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/type"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/expense_type_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:checked="false"
                            android:theme="@style/ExpenseSwitchTheme"/>

                        <TextView
                            android:id="@+id/expense_type_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment"
                            android:textColor="@color/budget_red"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/first_occurrence"
                        android:textColor="@color/secondary_text"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/date_button"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/add_expense_edittext_drawable"
                        android:paddingBottom="0dp"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
